--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </button>
                     <div class="file-upload-wrapper">
                         <input type="file" accept="image/*" id="file-input" hidden>
-                        <img src="#">
+                        <img src="#" alt="icon imaage">
                         <button type="button" id="file-upload" class="material-symbols-rounded fa-solid fa-paperclip">
                         </button>
                         <button type="button" id="file-cancel"  class="fa-solid fa-xmark">
