--- a/index.html
+++ b/index.html
@@ -1,68 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ai-chatbot</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <!-- google fonts -->
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0&icon_names=keyboard_arrow_down" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0&icon_names=keyboard_arrow_down"
+    />
     <!-- font awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
-        integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
+      integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
 
-<body>
+  <body>
+<div class="chatbot-toggle">
+    <span></span>
+    <span></span>
+</div>
+
+
     <div class="chatbot-popup">
-        <!-- chatbot header -->
-        <div class="chat-header">
-            <div class="header-info">
-                <img class="chatbot-logo" src="/img/chatbot_17115944.png" alt="chatbot-icon" width="50" height="50">
-                <h2 class="logo-text">Chatbot</h2>
+      <!-- chatbot header -->
+      <div class="chat-header">
+        <div class="header-info">
+          <img
+            class="chatbot-logo"
+            src="/img/chatbot_17115944.png"
+            alt="chatbot-icon"
+            width="50"
+            height="50"
+          />
+          <h2 class="logo-text">Chatbot</h2>
+        </div>
+        <button id="close-chatbot" class="material-symbols-rounded">
+          keyboard_arrow_down
+        </button>
+      </div>
+      <!-- chatbot body -->
+      <div class="chat-body">
+        <div class="message bot-message">
+          <img
+            class="bot-avatar"
+            src="/img/chatbot_17115944.png"
+            alt="chatbot-icon"
+            width="50"
+            height="50"
+          />
+          <div class="message-text">
+            Ola <br />
+            how can I help you today?
+          </div>
+        </div>
+      </div>
+      <!--chatbot footer  -->
+      <div class="chat-footer">
+        <form action="#" class="chat-form">
+          <textarea
+            name=""
+            id=""
+            placeholder="write your message..."
+            class="message-input"
+            required
+          ></textarea>
+          <div class="chat-controls">
+            <button
+              type="button"
+              id="emoji-picker"
+              class="material-symbols-rounded fa-regular fa-face-grin-wide"
+            ></button>
+            <div class="file-upload-wrapper">
+              <input type="file" accept="image/*" id="file-input" hidden />
+              <img src="#" alt="icon imaage" />
+              <button
+                type="button"
+                id="file-upload"
+                class="material-symbols-rounded fa-solid fa-paperclip"
+              ></button>
+              <button
+                type="button"
+                id="file-cancel"
+                class="fa-solid fa-xmark"
+              ></button>
             </div>
-            <button id="close-chatbot" class="material-symbols-rounded">
-                keyboard_arrow_down
-            </button>
-        </div>
-        <!-- chatbot body -->
-        <div class="chat-body">
-            <div class="message bot-message">
-                <img class="bot-avatar" src="/img/chatbot_17115944.png" alt="chatbot-icon" width="50" height="50">
-                <div class="message-text">
-                    Ola <br> how can I help you today?
 
-                </div>
-            </div>
-
-        </div>
-        <!--chatbot footer  -->
-        <div class="chat-footer">
-            <form action="#" class="chat-form">
-                <textarea name="" id="" placeholder="write your message..." class="message-input" required></textarea>
-                <div class="chat-controls">
-                    <button type="button" class="material-symbols-rounded fa-regular fa-face-grin-wide">
-
-                    </button>
-                    <div class="file-upload-wrapper">
-                        <input type="file" accept="image/*" id="file-input" hidden>
-                        <img src="#" alt="icon imaage">
-                        <button type="button" id="file-upload" class="material-symbols-rounded fa-solid fa-paperclip">
-                        </button>
-                        <button type="button" id="file-cancel"  class="fa-solid fa-xmark">
-                        </button>
-                    </div>
-
-                    <button type="submit" id="send-message"
-                        class="material-symbols-rounded fa-solid fa-angle-up"></button>
-                </div>
-            </form>
-        </div>
+            <button
+              type="submit"
+              id="send-message"
+              class="material-symbols-rounded fa-solid fa-angle-up"
+            ></button>
+          </div>
+        </form>
+      </div>
     </div>
-</body>
-<script src="/js/script.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/emoji-mart@latest/dist/browser.js"></script>
+  </body>
+  <script src="/js/script.js"></script>
 </html>
